Fix projects imports and bugs in java code